Alterando imagens - Cursos

--- a/frontend/frontend/Views/Home/GetPizzas.cshtml
+++ b/frontend/frontend/Views/Home/GetPizzas.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<frontend.Models.PizzaInfo>
+﻿@model IEnumerable<frontend.Models.CursoInfo>
 
-<img src="/images/pizza1.jpg" class="img-fluid" alt="Cursos FGV" />
+<img src="/images/curso.jpg" class="img-fluid" alt="Cursos FGV" />
 <center><h3>Menu de Cursos FGV</h3></center>
 <br />
 <table class="table">
