--- a/frontend/frontend/Views/Home/Index.cshtml
+++ b/frontend/frontend/Views/Home/Index.cshtml
@@ -2,5 +2,5 @@
   <h1>Cursos FGV</h1>
   <br />
   <br />
-  <img src="/images/pizzaria1.jpg" class="img-fluid" alt="Cursos FGV" />
+  <img src="/images/curso1.jpg" class="img-fluid" alt="Cursos FGV" />
 </div>
