Alterando imagens - Cursos

--- a/frontend/frontend/Views/Shared/_Layout.cshtml
+++ b/frontend/frontend/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GetPizzas">Cursos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GetCursos">Cursos</a>
                         </li>
                     </ul>
                 </div>
