--- a/frontend/frontend/Views/Home/GetPizzas.cshtml
+++ b/frontend/frontend/Views/Home/GetPizzas.cshtml
@@ -7,7 +7,7 @@
    <thead>
       <tr>
          <th>Curso</th>
-         <th>Cursos</th>
+         <th>Descricao</th>
          <th>Preço</th>
          <th>Disponível</th>
       </tr>
@@ -17,7 +17,7 @@
       {
          <tr>
             <td>@curso.CursoNome</td>
-            <td>@curso.Cursos</td>
+            <td>@curso.Descricao</td>
             <td>@curso.CursoPreco.ToString("c")</td>
             <td>@curso.EmFalta</td>
          </tr>
